# lcs-desktop

./: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  lcs-taskbar-buttons.c  lcs-taskbar-task.c  lcs-taskbar.c  lcs-taskbar.h  lcs-wm.c  lcs-wm.h  main.c
